download the ship dataset

--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMSGAUrShsTXi8SEmEdCvd",
+      "authorship_tag": "ABX9TyMoD8pJXPUREOgemnBpKQQD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XjbYTh3B8dIu",
-        "outputId": "34fa3c57-15c6-4d65-db2e-3b8414929180"
+        "outputId": "d93bb0ca-d4e8-4447-ee4a-9760d895cfac"
       },
       "outputs": [
         {
@@ -65,9 +65,57 @@
         "import numpy as np"
       ],
       "metadata": {
-        "id": "lENoFT_Q9nIb"
+        "id": "Y9qEa2MFijFL"
       },
       "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !mkdir /content/drive/MyDrive/colab"
+      ],
+      "metadata": {
+        "id": "3HX0tKA3hxBe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/drive/MyDrive/colab"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BKxL40IHh2WW",
+        "outputId": "8e166e31-3ee4-4bdb-e945-e92aebc6bc46"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/colab\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir \"/content/drive/MyDrive/colab/ship_dataset\"\n",
+        "!wget  \"https://universe.roboflow.com/ds/Lj4L1fPBYB?key=QpCnaxfpAU\" -O \"/content/drive/MyDrive/colab/ship_dataset/ship.zip\"\n",
+        "!unzip \"/content/drive/MyDrive/colab/ship_dataset/ship.zip\" -d \"/content/drive/MyDrive/colab/ship_dataset\"\n",
+        "!rm -r \"/content/drive/MyDrive/colab/ship_dataset/ship.zip\""
+      ],
+      "metadata": {
+        "id": "DQ9qgT7Cil3Z"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
