--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMoD8pJXPUREOgemnBpKQQD",
+      "authorship_tag": "ABX9TyMGNBRDhf7NtOEIL5E5cR5R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -30,13 +32,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XjbYTh3B8dIu",
-        "outputId": "d93bb0ca-d4e8-4447-ee4a-9760d895cfac"
+        "outputId": "57425d11-6c69-450c-c83a-974e48a8871f"
       },
       "outputs": [
         {
@@ -73,7 +75,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# !mkdir /content/drive/MyDrive/colab"
+        "!mkdir /content/drive/MyDrive/colab"
       ],
       "metadata": {
         "id": "3HX0tKA3hxBe"
@@ -91,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BKxL40IHh2WW",
-        "outputId": "8e166e31-3ee4-4bdb-e945-e92aebc6bc46"
+        "outputId": "24f2a4ad-ba35-4ea2-d172-c37e8aba6c8d"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,15 +109,44 @@
     {
       "cell_type": "code",
       "source": [
-        "!mkdir \"/content/drive/MyDrive/colab/ship_dataset\"\n",
-        "!wget  \"https://universe.roboflow.com/ds/Lj4L1fPBYB?key=QpCnaxfpAU\" -O \"/content/drive/MyDrive/colab/ship_dataset/ship.zip\"\n",
-        "!unzip \"/content/drive/MyDrive/colab/ship_dataset/ship.zip\" -d \"/content/drive/MyDrive/colab/ship_dataset\"\n",
-        "!rm -r \"/content/drive/MyDrive/colab/ship_dataset/ship.zip\""
+        "!mkdir \"/content/drive/MyDrive/colab/corrosion_dataset\"\n",
+        "!wget  \"https://universe.roboflow.com/ds/2McX7x8m20?key=xETVR2Gpai\" -O \"/content/drive/MyDrive/colab/corrosion_dataset/corrosion.zip\"\n",
+        "!unzip \"/content/drive/MyDrive/colab/corrosion_dataset/corrosion.zip\" -d \"/content/drive/MyDrive/colab/corrosion_dataset\"\n",
+        "!rm -r \"/content/drive/MyDrive/colab/corrosion_dataset/corrosion.zip\""
       ],
       "metadata": {
         "id": "DQ9qgT7Cil3Z"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "transform = transforms.Compose([transforms.ToTensor(), transforms.Resize(320), transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+        "\n",
+        "transform1 = transforms.Compose([transforms.ToTensor(),\n",
+        "                                 transforms.Resize(320),\n",
+        "                                 transforms.RandomHorizontalFlip(p=0.9),\n",
+        "                                 transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+        "                                ])\n",
+        "\n",
+        "batch_size = 4\n",
+        "\n",
+        "trainset = torchvision.datasets.ImageFolder('/content/drive/MyDrive/colab/corrosion_dataset/train', transform=transform)\n",
+        "\n",
+        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
+        "\n",
+        "testset = torchvision.datasets.ImageFolder('/content/drive/MyDrive/colab/corrosion_dataset/valid', transform=transform)\n",
+        "\n",
+        "testloader = torch.utils.data.DataLoader(testset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
+        "\n",
+        "classes = (\"Corrosion\", \"No corrosion\")"
+      ],
+      "metadata": {
+        "id": "Bon-8LlYncxK"
+      },
+      "execution_count": 36,
       "outputs": []
     }
   ]
