--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMAKWnxBFG0ml5xKmzgyLBD",
+      "authorship_tag": "ABX9TyNsKlxstqRUBZq06AXfucLX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,21 +31,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Mount your drive"
+      ],
+      "metadata": {
+        "id": "UBCD7cSABRiO"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XjbYTh3B8dIu",
-        "outputId": "9e3760ab-e3fd-485b-99dd-f9f6ade498e4"
+        "outputId": "790f8644-2ed2-479c-dab7-397a76c00deb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -53,6 +62,15 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Install the requirements"
+      ],
+      "metadata": {
+        "id": "zS_wJFTrBWKN"
+      }
     },
     {
       "cell_type": "code",
@@ -69,7 +87,7 @@
       "metadata": {
         "id": "Y9qEa2MFijFL"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -93,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BKxL40IHh2WW",
-        "outputId": "2a11ae4d-76b5-43bc-da9f-7e1f94cc4ec7"
+        "outputId": "d1d1401d-4ec3-4d3d-d1bd-cd4b2994da07"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,6 +123,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Download a dataset"
+      ],
+      "metadata": {
+        "id": "OpNCoW5qA7Kl"
+      }
     },
     {
       "cell_type": "code",
@@ -119,6 +146,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Load the train and test set"
+      ],
+      "metadata": {
+        "id": "ZOkxrSDYBaPQ"
+      }
     },
     {
       "cell_type": "code",
@@ -146,8 +182,17 @@
       "metadata": {
         "id": "Bon-8LlYncxK"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Display function"
+      ],
+      "metadata": {
+        "id": "PejbalxyBf3Y"
+      }
     },
     {
       "cell_type": "code",
@@ -156,18 +201,35 @@
         "\n",
         "plt.rcParams[\"figure.figsize\"] = (15, 50)\n",
         "\n",
+        "# displays unnormalized images\n",
         "def imshow(img):\n",
-        "    img = img / 2 + 0.5     # unnormalize\n",
+        "    img = img / 2 + 0.5 # unnormalize\n",
         "    npimg = img.numpy()\n",
         "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
-        "    plt.show()\n",
-        "\n",
-        "\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "ZOCdyNcs_6VN"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# fetchs a batch from the train set\n",
         "dataiter = iter(trainloader)\n",
-        "images, labels = dataiter.next()\n",
-        "\n",
-        "\n",
+        "images, labels = dataiter.next()"
+      ],
+      "metadata": {
+        "id": "1a2ZKJs5CjSW"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "imshow(torchvision.utils.make_grid(images))\n",
         "print('\\n'.join(f'{classes[labels[j]]:10s}' for j in range(batch_size)))"
       ],
@@ -179,7 +241,7 @@
         "id": "EYIec5ZR5Bx-",
         "outputId": "6c4f6b60-5ba4-4f3a-f229-80b562b449e7"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
