--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNsKlxstqRUBZq06AXfucLX",
+      "authorship_tag": "ABX9TyOGm45Oi+cJwe05JCbIE69K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,20 +41,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XjbYTh3B8dIu",
-        "outputId": "790f8644-2ed2-479c-dab7-397a76c00deb"
+        "outputId": "9164d291-1bff-4aaa-e3e5-3336e27b2565"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "Y9qEa2MFijFL"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -111,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BKxL40IHh2WW",
-        "outputId": "d1d1401d-4ec3-4d3d-d1bd-cd4b2994da07"
+        "outputId": "0ea46a5e-77d4-44ef-bfbe-3a1230807197"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "Bon-8LlYncxK"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
       "metadata": {
         "id": "ZOCdyNcs_6VN"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "1a2ZKJs5CjSW"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -266,6 +266,182 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The CNN model"
+      ],
+      "metadata": {
+        "id": "Dt-olEaS0e-m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Device configuration\n",
+        "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+        "print(device)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "juSOC-t02H4v",
+        "outputId": "440bdd26-d576-49c7-a68a-afdacfdbaad8"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cuda:0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conv1 = nn.Conv2d(3, 6, 3).to(device)\n",
+        "pool = nn.MaxPool2d(2, 2).to(device)\n",
+        "conv2 = nn.Conv2d(6, 16, 5).to(device)\n",
+        "fc1 = nn.Linear(16 * 77 * 77, 120).to(device)\n",
+        "fc2 = nn.Linear(120, 84).to(device)\n",
+        "fc3 = nn.Linear(84, 10).to(device)\n",
+        "\n",
+        "print(f'Before Conv1:\\n {images[0][0]}')\n",
+        "\n",
+        "print(f'\\nThe image size:{images.shape}')\n",
+        "\n",
+        "images = images.to(device)\n",
+        "print(f'\\nThe image is sent to {images.device}')\n",
+        "\n",
+        "x = conv1(images)\n",
+        "print(f'\\nThe image size after Conv1: {x.shape}')\n",
+        "\n",
+        "x = pool(x)\n",
+        "print(f'\\nThe image size after MaxPool: {x.shape}')\n",
+        "\n",
+        "x = conv2(x)\n",
+        "print(f'\\nThe image size after Conv2: {x.shape}')\n",
+        "\n",
+        "x = pool(x)\n",
+        "print(f'\\nThe image size after MaxPool: {x.shape}')\n",
+        "\n",
+        "print(f'\\nThe tensor after two convolutions and maxpools: \\n\\n{x[0][0]}')\n",
+        "print(f'\\nThe feature tensor after the ReLU function: \\n\\n{F.relu(x[0][0])}')\n",
+        "\n",
+        "x = torch.flatten(x, 1)\n",
+        "print(f'\\nThe image size after flatten: {x.shape}')\n",
+        "\n",
+        "x = fc1(x)\n",
+        "print(f'\\nThe image size after fc1: {x.shape}')\n",
+        "\n",
+        "x = fc2(x)\n",
+        "print(f'\\nThe image size after fc2: {x.shape}')\n",
+        "\n",
+        "x = fc3(x)\n",
+        "print(f'\\nThe image size after fc3: {x.shape}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JxMCfmoBz0rC",
+        "outputId": "e035d1be-74f1-4d6f-9251-0dee1ebe31b6"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before Conv1:\n",
+            " tensor([[-0.7576, -0.7571, -0.7565,  ..., -0.6191, -0.5845, -0.6137],\n",
+            "        [ 0.5486,  0.5522,  0.5565,  ...,  0.2103,  0.3575,  0.4166],\n",
+            "        [ 0.3196,  0.3231,  0.3275,  ...,  0.2789,  0.4401,  0.4882],\n",
+            "        ...,\n",
+            "        [ 0.7902,  0.7902,  0.7902,  ..., -0.1471, -0.1562, -0.1638],\n",
+            "        [ 0.7961,  0.7961,  0.7961,  ..., -0.1976, -0.1682, -0.1443],\n",
+            "        [ 0.8027,  0.8027,  0.8027,  ..., -0.6573, -0.6458, -0.6360]])\n",
+            "\n",
+            "The image size:torch.Size([4, 3, 320, 320])\n",
+            "\n",
+            "The image is sent to cuda:0\n",
+            "\n",
+            "The image size after Conv1: torch.Size([4, 6, 318, 318])\n",
+            "\n",
+            "The image size after MaxPool: torch.Size([4, 6, 159, 159])\n",
+            "\n",
+            "The image size after Conv2: torch.Size([4, 16, 155, 155])\n",
+            "\n",
+            "The image size after MaxPool: torch.Size([4, 16, 77, 77])\n",
+            "\n",
+            "The tensor after two convolutions and maxpools: \n",
+            "\n",
+            "tensor([[0.1432, 0.1492, 0.1581,  ..., 0.0791, 0.0551, 0.0239],\n",
+            "        [0.3676, 0.3671, 0.3670,  ..., 0.1142, 0.0941, 0.0342],\n",
+            "        [0.3518, 0.3608, 0.3691,  ..., 0.1097, 0.0507, 0.0046],\n",
+            "        ...,\n",
+            "        [0.3743, 0.3721, 0.3691,  ..., 0.2386, 0.3218, 0.2595],\n",
+            "        [0.3776, 0.3795, 0.3771,  ..., 0.2152, 0.3233, 0.2441],\n",
+            "        [0.3766, 0.3789, 0.3766,  ..., 0.2248, 0.2820, 0.1960]],\n",
+            "       device='cuda:0', grad_fn=<SelectBackward0>)\n",
+            "\n",
+            "The feature tensor after the ReLU function: \n",
+            "\n",
+            "tensor([[0.1432, 0.1492, 0.1581,  ..., 0.0791, 0.0551, 0.0239],\n",
+            "        [0.3676, 0.3671, 0.3670,  ..., 0.1142, 0.0941, 0.0342],\n",
+            "        [0.3518, 0.3608, 0.3691,  ..., 0.1097, 0.0507, 0.0046],\n",
+            "        ...,\n",
+            "        [0.3743, 0.3721, 0.3691,  ..., 0.2386, 0.3218, 0.2595],\n",
+            "        [0.3776, 0.3795, 0.3771,  ..., 0.2152, 0.3233, 0.2441],\n",
+            "        [0.3766, 0.3789, 0.3766,  ..., 0.2248, 0.2820, 0.1960]],\n",
+            "       device='cuda:0', grad_fn=<ReluBackward0>)\n",
+            "\n",
+            "The image size after flatten: torch.Size([4, 94864])\n",
+            "\n",
+            "The image size after fc1: torch.Size([4, 120])\n",
+            "\n",
+            "The image size after fc2: torch.Size([4, 84])\n",
+            "\n",
+            "The image size after fc3: torch.Size([4, 10])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Net(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+        "        self.pool = nn.MaxPool2d(2, 2)\n",
+        "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+        "        self.fc1 = nn.Linear(16 * 77 * 77, 120)\n",
+        "        self.fc2 = nn.Linear(120, 84)\n",
+        "        self.fc3 = nn.Linear(84, 5)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.pool(F.relu(self.conv1(x)))\n",
+        "        x = self.pool(F.relu(self.conv2(x)))\n",
+        "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = F.relu(self.fc2(x))\n",
+        "        x = self.fc3(x)\n",
+        "        return x\n",
+        "\n",
+        "\n",
+        "model = Net().to(device)"
+      ],
+      "metadata": {
+        "id": "G9MdRNJI2OYK"
+      },
+      "execution_count": 9,
+      "outputs": []
     }
   ]
 }
