optimizer and loss function

--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGm45Oi+cJwe05JCbIE69K",
+      "authorship_tag": "ABX9TyPF4aJ/XIFvMxgJrLQZzO+l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -441,6 +441,29 @@
         "id": "G9MdRNJI2OYK"
       },
       "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Optimizer and loss function"
+      ],
+      "metadata": {
+        "id": "8J0Eb3HMajJK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.optim as optim\n",
+        "\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = optim.SGD(model.parameters(), lr=0.001, momentum = 0.9)"
+      ],
+      "metadata": {
+        "id": "mVEE9zXRaiQ8"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
