--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPF4aJ/XIFvMxgJrLQZzO+l",
+      "authorship_tag": "ABX9TyNjr2tirDuPkLX64WkBvQBw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XjbYTh3B8dIu",
-        "outputId": "9164d291-1bff-4aaa-e3e5-3336e27b2565"
+        "outputId": "3ca8aa08-f88f-46cb-f33f-f1a2ad148099"
       },
       "outputs": [
         {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "Y9qEa2MFijFL"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -111,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BKxL40IHh2WW",
-        "outputId": "0ea46a5e-77d4-44ef-bfbe-3a1230807197"
+        "outputId": "74416b3e-8c50-410a-809c-dbea3b11d9da"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "Bon-8LlYncxK"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
       "metadata": {
         "id": "ZOCdyNcs_6VN"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "1a2ZKJs5CjSW"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -288,9 +288,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "juSOC-t02H4v",
-        "outputId": "440bdd26-d576-49c7-a68a-afdacfdbaad8"
+        "outputId": "831447cd-07e7-4da1-ff35-2ba9853f25a9"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,14 +302,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Typical CNN architectures stack a few convolutional layers (each one generally followed by a ReLU layer), then a pooling layer, and so on.\n",
+        "\n",
+        "The image gets smaller and smaller as it progresses through the network, but it also typically gets deeper and deeper (i.e., with more feature maps), thanks to the convolutional layers. At the top of the stack, a regular feedforward neural network is added, composed of a few fully connected layers (+ReLUs), and the final layer outputs the prediction."
+      ],
+      "metadata": {
+        "id": "4gBaBp2EKv8H"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "conv1 = nn.Conv2d(3, 6, 3).to(device)\n",
-        "pool = nn.MaxPool2d(2, 2).to(device)\n",
-        "conv2 = nn.Conv2d(6, 16, 5).to(device)\n",
-        "fc1 = nn.Linear(16 * 77 * 77, 120).to(device)\n",
-        "fc2 = nn.Linear(120, 84).to(device)\n",
-        "fc3 = nn.Linear(84, 10).to(device)\n",
+        "conv1 = nn.Conv2d(3, 16, 5, padding='same').to(device)   # nn.Conv2d(input_channel, output_channel, filter_size)\n",
+        "pool = nn.MaxPool2d(2, 2).to(device)                     # nn.MaxPool2d(filter_size, stride)\n",
+        "conv2 = nn.Conv2d(16, 64, 3, padding='same').to(device)\n",
+        "conv3 = nn.Conv2d(64, 256, 3, padding='same').to(device)\n",
+        "fc1 = nn.Linear(256 * 40 * 40, 120).to(device)           # nn.Linear(input_features, output_features)\n",
+        "fc2 = nn.Linear(120, 84).to(device)                      # fc = fully connected\n",
+        "fc3 = nn.Linear(84, 2).to(device)\n",
         "\n",
         "print(f'Before Conv1:\\n {images[0][0]}')\n",
         "\n",
@@ -319,95 +331,95 @@
         "print(f'\\nThe image is sent to {images.device}')\n",
         "\n",
         "x = conv1(images)\n",
-        "print(f'\\nThe image size after Conv1: {x.shape}')\n",
+        "print(f'\\nAfter Conv1 the image size is: {x.shape}')\n",
         "\n",
         "x = pool(x)\n",
-        "print(f'\\nThe image size after MaxPool: {x.shape}')\n",
+        "print(f'\\nAfter MaxPool the image size is: {x.shape}')\n",
         "\n",
         "x = conv2(x)\n",
-        "print(f'\\nThe image size after Conv2: {x.shape}')\n",
+        "print(f'\\nAfter Conv2 the image size is: {x.shape}')\n",
         "\n",
         "x = pool(x)\n",
-        "print(f'\\nThe image size after MaxPool: {x.shape}')\n",
+        "print(f'\\nAfter MaxPool the image size is: {x.shape}')\n",
         "\n",
-        "print(f'\\nThe tensor after two convolutions and maxpools: \\n\\n{x[0][0]}')\n",
-        "print(f'\\nThe feature tensor after the ReLU function: \\n\\n{F.relu(x[0][0])}')\n",
+        "print(f'\\nAfter two convolutions and maxpools the tensor is: \\n\\n{x[0][0]}')\n",
+        "print(f'\\nAfter ReLU the tensor is: \\n\\n{F.relu(x[0][0])}')\n",
         "\n",
         "x = torch.flatten(x, 1)\n",
-        "print(f'\\nThe image size after flatten: {x.shape}')\n",
+        "print(f'\\nAfter flatten the image size is: {x.shape}')\n",
         "\n",
         "x = fc1(x)\n",
-        "print(f'\\nThe image size after fc1: {x.shape}')\n",
+        "print(f'\\nAfter fc1 the image size is: {x.shape}')\n",
         "\n",
         "x = fc2(x)\n",
-        "print(f'\\nThe image size after fc2: {x.shape}')\n",
+        "print(f'\\nAfter fc2 the image size is: {x.shape}')\n",
         "\n",
         "x = fc3(x)\n",
-        "print(f'\\nThe image size after fc3: {x.shape}')"
+        "print(f'\\nAfter fc3 the image size is: {x.shape}')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JxMCfmoBz0rC",
-        "outputId": "e035d1be-74f1-4d6f-9251-0dee1ebe31b6"
+        "outputId": "d77a58b6-833f-45c9-cfa7-121f8c5e3f70"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Before Conv1:\n",
-            " tensor([[-0.7576, -0.7571, -0.7565,  ..., -0.6191, -0.5845, -0.6137],\n",
-            "        [ 0.5486,  0.5522,  0.5565,  ...,  0.2103,  0.3575,  0.4166],\n",
-            "        [ 0.3196,  0.3231,  0.3275,  ...,  0.2789,  0.4401,  0.4882],\n",
+            " tensor([[-0.2596, -0.2566, -0.2521,  ...,  0.6375,  0.6282,  0.6247],\n",
+            "        [ 0.1218,  0.1188,  0.1221,  ...,  0.6427,  0.6404,  0.6384],\n",
+            "        [ 0.7653,  0.7686,  0.7686,  ...,  0.6544,  0.6621,  0.6647],\n",
             "        ...,\n",
-            "        [ 0.7902,  0.7902,  0.7902,  ..., -0.1471, -0.1562, -0.1638],\n",
-            "        [ 0.7961,  0.7961,  0.7961,  ..., -0.1976, -0.1682, -0.1443],\n",
-            "        [ 0.8027,  0.8027,  0.8027,  ..., -0.6573, -0.6458, -0.6360]])\n",
+            "        [ 0.4892,  0.4419,  0.4922,  ..., -0.1181, -0.1399, -0.1056],\n",
+            "        [ 0.4899,  0.4702,  0.4858,  ..., -0.0981, -0.1161, -0.1117],\n",
+            "        [ 0.4864,  0.5119,  0.5035,  ..., -0.0885, -0.0448, -0.0639]])\n",
             "\n",
             "The image size:torch.Size([4, 3, 320, 320])\n",
             "\n",
             "The image is sent to cuda:0\n",
             "\n",
-            "The image size after Conv1: torch.Size([4, 6, 318, 318])\n",
+            "After Conv1 the image size is: torch.Size([4, 16, 320, 320])\n",
             "\n",
-            "The image size after MaxPool: torch.Size([4, 6, 159, 159])\n",
+            "After MaxPool the image size is: torch.Size([4, 16, 160, 160])\n",
             "\n",
-            "The image size after Conv2: torch.Size([4, 16, 155, 155])\n",
+            "After Conv2 the image size is: torch.Size([4, 64, 160, 160])\n",
             "\n",
-            "The image size after MaxPool: torch.Size([4, 16, 77, 77])\n",
+            "After MaxPool the image size is: torch.Size([4, 64, 80, 80])\n",
             "\n",
-            "The tensor after two convolutions and maxpools: \n",
+            "After two convolutions and maxpools the tensor is: \n",
             "\n",
-            "tensor([[0.1432, 0.1492, 0.1581,  ..., 0.0791, 0.0551, 0.0239],\n",
-            "        [0.3676, 0.3671, 0.3670,  ..., 0.1142, 0.0941, 0.0342],\n",
-            "        [0.3518, 0.3608, 0.3691,  ..., 0.1097, 0.0507, 0.0046],\n",
+            "tensor([[-0.1208, -0.3546, -0.3499,  ..., -0.3206, -0.3189, -0.3162],\n",
+            "        [-0.0008, -0.3375, -0.3446,  ..., -0.4034, -0.4053, -0.3559],\n",
+            "        [-0.1509, -0.2725, -0.2748,  ..., -0.4153, -0.4161, -0.3628],\n",
             "        ...,\n",
-            "        [0.3743, 0.3721, 0.3691,  ..., 0.2386, 0.3218, 0.2595],\n",
-            "        [0.3776, 0.3795, 0.3771,  ..., 0.2152, 0.3233, 0.2441],\n",
-            "        [0.3766, 0.3789, 0.3766,  ..., 0.2248, 0.2820, 0.1960]],\n",
+            "        [-0.1108, -0.2585, -0.2613,  ..., -0.1211, -0.1179, -0.1472],\n",
+            "        [-0.0958, -0.2594, -0.2685,  ..., -0.1091, -0.1235, -0.1131],\n",
+            "        [-0.1329, -0.2217, -0.2257,  ..., -0.0994, -0.0894, -0.0931]],\n",
             "       device='cuda:0', grad_fn=<SelectBackward0>)\n",
             "\n",
-            "The feature tensor after the ReLU function: \n",
+            "After ReLU the tensor is: \n",
             "\n",
-            "tensor([[0.1432, 0.1492, 0.1581,  ..., 0.0791, 0.0551, 0.0239],\n",
-            "        [0.3676, 0.3671, 0.3670,  ..., 0.1142, 0.0941, 0.0342],\n",
-            "        [0.3518, 0.3608, 0.3691,  ..., 0.1097, 0.0507, 0.0046],\n",
+            "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+            "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+            "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
             "        ...,\n",
-            "        [0.3743, 0.3721, 0.3691,  ..., 0.2386, 0.3218, 0.2595],\n",
-            "        [0.3776, 0.3795, 0.3771,  ..., 0.2152, 0.3233, 0.2441],\n",
-            "        [0.3766, 0.3789, 0.3766,  ..., 0.2248, 0.2820, 0.1960]],\n",
-            "       device='cuda:0', grad_fn=<ReluBackward0>)\n",
+            "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+            "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+            "        [0., 0., 0.,  ..., 0., 0., 0.]], device='cuda:0',\n",
+            "       grad_fn=<ReluBackward0>)\n",
             "\n",
-            "The image size after flatten: torch.Size([4, 94864])\n",
+            "After flatten the image size is: torch.Size([4, 409600])\n",
             "\n",
-            "The image size after fc1: torch.Size([4, 120])\n",
+            "After fc1 the image size is: torch.Size([4, 120])\n",
             "\n",
-            "The image size after fc2: torch.Size([4, 84])\n",
+            "After fc2 the image size is: torch.Size([4, 84])\n",
             "\n",
-            "The image size after fc3: torch.Size([4, 10])\n"
+            "After fc3 the image size is: torch.Size([4, 2])\n"
           ]
         }
       ]
@@ -418,16 +430,18 @@
         "class Net(nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
-        "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+        "        self.conv1 = nn.Conv2d(3, 16, 5, padding='same')\n",
         "        self.pool = nn.MaxPool2d(2, 2)\n",
-        "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
-        "        self.fc1 = nn.Linear(16 * 77 * 77, 120)\n",
+        "        self.conv2 = nn.Conv2d(16, 64, 3, padding='same')\n",
+        "        self.conv3 = nn.Conv2d(64, 256, 3, padding='same')\n",
+        "        self.fc1 = nn.Linear(256 * 40 * 40, 120)\n",
         "        self.fc2 = nn.Linear(120, 84)\n",
-        "        self.fc3 = nn.Linear(84, 5)\n",
+        "        self.fc3 = nn.Linear(84, 2)\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = self.pool(F.relu(self.conv1(x)))\n",
         "        x = self.pool(F.relu(self.conv2(x)))\n",
+        "        x = self.pool(F.relu(self.conv3(x)))\n",
         "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
         "        x = F.relu(self.fc1(x))\n",
         "        x = F.relu(self.fc2(x))\n",
@@ -440,7 +454,7 @@
       "metadata": {
         "id": "G9MdRNJI2OYK"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -463,7 +477,7 @@
       "metadata": {
         "id": "mVEE9zXRaiQ8"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     }
   ]
