the train test info

--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjr2tirDuPkLX64WkBvQBw",
+      "authorship_tag": "ABX9TyNdndOy3/O3TQl+3j3BAGHE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -157,15 +157,27 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The next preprocessing and augmentations steps were applied:\n",
+        "- Auto-Orient: Applied\n",
+        "- Resize: Stretch to 416x416\n",
+        "- Outputs per training example: 3\n",
+        "- Flip: Horizontal, Vertical\n",
+        "- 90° Rotate: Clockwise, Counter-Clockwise, Upside Down\n",
+        "- Saturation: Between -15% and +15%\n",
+        "- Brightness: Between -12% and +12%\n",
+        "- Exposure: Between -5% and +5%\n",
+        "- Blur: Up to 0.5px"
+      ],
+      "metadata": {
+        "id": "azi-vShqLxCd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "transform = transforms.Compose([transforms.ToTensor(), transforms.Resize(320), transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
-        "\n",
-        "transform1 = transforms.Compose([transforms.ToTensor(),\n",
-        "                                 transforms.Resize(320),\n",
-        "                                 transforms.RandomHorizontalFlip(p=0.9),\n",
-        "                                 transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
-        "                                ])\n",
         "\n",
         "batch_size = 4\n",
         "\n",
