--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdndOy3/O3TQl+3j3BAGHE",
+      "authorship_tag": "ABX9TyMGEURke8MMvcwugSgeHSgD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XjbYTh3B8dIu",
-        "outputId": "3ca8aa08-f88f-46cb-f33f-f1a2ad148099"
+        "outputId": "d6dabcdf-461d-457c-8946-523718e5543a"
       },
       "outputs": [
         {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "Y9qEa2MFijFL"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -111,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BKxL40IHh2WW",
-        "outputId": "74416b3e-8c50-410a-809c-dbea3b11d9da"
+        "outputId": "eab39d5e-6c07-4be0-b0d9-e3b5f3af35be"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "Bon-8LlYncxK"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
       "metadata": {
         "id": "ZOCdyNcs_6VN"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "1a2ZKJs5CjSW"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -300,9 +300,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "juSOC-t02H4v",
-        "outputId": "831447cd-07e7-4da1-ff35-2ba9853f25a9"
+        "outputId": "a8d34ca2-e935-4c18-ef37-b88e6974d50f"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,22 +374,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JxMCfmoBz0rC",
-        "outputId": "d77a58b6-833f-45c9-cfa7-121f8c5e3f70"
+        "outputId": "f0179d12-482a-44b3-e40c-87effb25f58b"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Before Conv1:\n",
-            " tensor([[-0.2596, -0.2566, -0.2521,  ...,  0.6375,  0.6282,  0.6247],\n",
-            "        [ 0.1218,  0.1188,  0.1221,  ...,  0.6427,  0.6404,  0.6384],\n",
-            "        [ 0.7653,  0.7686,  0.7686,  ...,  0.6544,  0.6621,  0.6647],\n",
+            " tensor([[-0.1836, -0.1051, -0.0556,  ..., -0.2513, -0.3201, -0.3135],\n",
+            "        [-0.2959, -0.4351, -0.3493,  ..., -0.4390, -0.3509, -0.3656],\n",
+            "        [ 0.2492,  0.1577,  0.1863,  ..., -0.0613, -0.1248, -0.1891],\n",
             "        ...,\n",
-            "        [ 0.4892,  0.4419,  0.4922,  ..., -0.1181, -0.1399, -0.1056],\n",
-            "        [ 0.4899,  0.4702,  0.4858,  ..., -0.0981, -0.1161, -0.1117],\n",
-            "        [ 0.4864,  0.5119,  0.5035,  ..., -0.0885, -0.0448, -0.0639]])\n",
+            "        [ 0.2627,  0.2627,  0.2627,  ...,  0.0319,  0.0275,  0.0258],\n",
+            "        [ 0.2627,  0.2627,  0.2627,  ...,  0.0275,  0.0251,  0.0201],\n",
+            "        [ 0.2627,  0.2627,  0.2627,  ...,  0.0258,  0.0201,  0.0196]])\n",
             "\n",
             "The image size:torch.Size([4, 3, 320, 320])\n",
             "\n",
@@ -405,25 +405,25 @@
             "\n",
             "After two convolutions and maxpools the tensor is: \n",
             "\n",
-            "tensor([[-0.1208, -0.3546, -0.3499,  ..., -0.3206, -0.3189, -0.3162],\n",
-            "        [-0.0008, -0.3375, -0.3446,  ..., -0.4034, -0.4053, -0.3559],\n",
-            "        [-0.1509, -0.2725, -0.2748,  ..., -0.4153, -0.4161, -0.3628],\n",
+            "tensor([[ 0.1419,  0.1255,  0.1104,  ...,  0.1627,  0.1688,  0.1170],\n",
+            "        [ 0.1494,  0.1922,  0.0783,  ...,  0.1627,  0.2151,  0.1081],\n",
+            "        [ 0.0115,  0.0381,  0.0506,  ...,  0.1377,  0.1299,  0.1652],\n",
             "        ...,\n",
-            "        [-0.1108, -0.2585, -0.2613,  ..., -0.1211, -0.1179, -0.1472],\n",
-            "        [-0.0958, -0.2594, -0.2685,  ..., -0.1091, -0.1235, -0.1131],\n",
-            "        [-0.1329, -0.2217, -0.2257,  ..., -0.0994, -0.0894, -0.0931]],\n",
+            "        [-0.0877, -0.2194, -0.2215,  ..., -0.1160, -0.1104, -0.0291],\n",
+            "        [-0.0861, -0.2170, -0.2206,  ..., -0.1103, -0.1074, -0.0282],\n",
+            "        [-0.0555, -0.0753, -0.0767,  ..., -0.0027, -0.0010, -0.0093]],\n",
             "       device='cuda:0', grad_fn=<SelectBackward0>)\n",
             "\n",
             "After ReLU the tensor is: \n",
             "\n",
-            "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
-            "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-            "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+            "tensor([[0.1419, 0.1255, 0.1104,  ..., 0.1627, 0.1688, 0.1170],\n",
+            "        [0.1494, 0.1922, 0.0783,  ..., 0.1627, 0.2151, 0.1081],\n",
+            "        [0.0115, 0.0381, 0.0506,  ..., 0.1377, 0.1299, 0.1652],\n",
             "        ...,\n",
-            "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-            "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-            "        [0., 0., 0.,  ..., 0., 0., 0.]], device='cuda:0',\n",
-            "       grad_fn=<ReluBackward0>)\n",
+            "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000]],\n",
+            "       device='cuda:0', grad_fn=<ReluBackward0>)\n",
             "\n",
             "After flatten the image size is: torch.Size([4, 409600])\n",
             "\n",
@@ -466,7 +466,7 @@
       "metadata": {
         "id": "G9MdRNJI2OYK"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -489,7 +489,111 @@
       "metadata": {
         "id": "mVEE9zXRaiQ8"
       },
-      "execution_count": 12,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Train the CNN model"
+      ],
+      "metadata": {
+        "id": "9jAgrOEHPsaa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "\n",
+        "epochs = 10\n",
+        "\n",
+        "for epoch in range(epochs):\n",
+        "\n",
+        "    running_loss = 0.0\n",
+        "\n",
+        "    for i, data in enumerate(trainloader, 0):\n",
+        "        inputs, labels = data\n",
+        "\n",
+        "        inputs = inputs.to(device)\n",
+        "        labels = labels.to(device)\n",
+        "          \n",
+        "        # zero the parameter gradients\n",
+        "        optimizer.zero_grad()\n",
+        "\n",
+        "        # forward + backward + optimize\n",
+        "        outputs = model(inputs)\n",
+        "        loss = criterion(outputs, labels)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "        # print statistics\n",
+        "        running_loss += loss.item()\n",
+        "        if i % 50 == 49 :    # print every xy mini-batches\n",
+        "            print(f'[{epoch + 1}, {i + 1:5d}] loss: {running_loss / 500:.3f}')\n",
+        "            running_loss = 0.0\n",
+        "\n",
+        "print('Finished Training')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bScYW8G5Pbj7",
+        "outputId": "546a3577-76ce-4d29-8aa0-e2dff11e3ea8"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1,    50] loss: 0.067\n",
+            "[1,   100] loss: 0.058\n",
+            "[1,   150] loss: 0.058\n",
+            "[2,    50] loss: 0.058\n",
+            "[2,   100] loss: 0.052\n",
+            "[2,   150] loss: 0.047\n",
+            "[3,    50] loss: 0.050\n",
+            "[3,   100] loss: 0.050\n",
+            "[3,   150] loss: 0.043\n",
+            "[4,    50] loss: 0.039\n",
+            "[4,   100] loss: 0.039\n",
+            "[4,   150] loss: 0.038\n",
+            "[5,    50] loss: 0.036\n",
+            "[5,   100] loss: 0.036\n",
+            "[5,   150] loss: 0.034\n",
+            "[6,    50] loss: 0.034\n",
+            "[6,   100] loss: 0.027\n",
+            "[6,   150] loss: 0.033\n",
+            "[7,    50] loss: 0.030\n",
+            "[7,   100] loss: 0.016\n",
+            "[7,   150] loss: 0.037\n",
+            "[8,    50] loss: 0.025\n",
+            "[8,   100] loss: 0.029\n",
+            "[8,   150] loss: 0.014\n",
+            "[9,    50] loss: 0.018\n",
+            "[9,   100] loss: 0.014\n",
+            "[9,   150] loss: 0.016\n",
+            "[10,    50] loss: 0.022\n",
+            "[10,   100] loss: 0.010\n",
+            "[10,   150] loss: 0.009\n",
+            "Finished Training\n",
+            "CPU times: user 35.6 s, sys: 3.09 s, total: 38.7 s\n",
+            "Wall time: 1min 39s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "jrLBawKkRXNl"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
