--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEpRdQ1pL3LzIGZ9LoJ3ns",
+      "authorship_tag": "ABX9TyO0woniVwKDBXjbFzgZTuRZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XjbYTh3B8dIu",
-        "outputId": "9339eb62-1e21-4cb5-a7e7-5f74135c1e6f"
+        "outputId": "bc9ebab0-5439-4e63-b121-4500bd73233b"
       },
       "outputs": [
         {
@@ -111,7 +111,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BKxL40IHh2WW",
-        "outputId": "a2dd94af-39a9-4aa3-9965-2183aad3537c"
+        "outputId": "7b9bdef8-e385-4fcb-8c62-834de34222bd"
       },
       "execution_count": 3,
       "outputs": [
@@ -300,7 +300,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "juSOC-t02H4v",
-        "outputId": "2c6b01ac-727e-4f69-bbab-c887fa911213"
+        "outputId": "b346c920-46c2-4098-9b2c-d84c211854dc"
       },
       "execution_count": 7,
       "outputs": [
@@ -662,7 +662,7 @@
       "metadata": {
         "id": "G9MdRNJI2OYK"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -685,7 +685,7 @@
       "metadata": {
         "id": "mVEE9zXRaiQ8"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -702,7 +702,7 @@
       "source": [
         "%%time\n",
         "\n",
-        "epochs = 10\n",
+        "epochs = 20\n",
         "\n",
         "for epoch in range(epochs):\n",
         "\n",
@@ -714,7 +714,7 @@
         "        inputs = inputs.to(device)\n",
         "        labels = labels.to(device)\n",
         "          \n",
-        "        # zero the parameter gradients\n",
+        "        # zeros the parameter gradients\n",
         "        optimizer.zero_grad()\n",
         "\n",
         "        # forward + backward + optimize\n",
@@ -725,8 +725,8 @@
         "\n",
         "        # print statistics\n",
         "        running_loss += loss.item()\n",
-        "        if i % 50 == 49 :    # print every xy mini-batches\n",
-        "            print(f'[{epoch + 1}, {i + 1:5d}] loss: {running_loss / 500:.3f}')\n",
+        "        if i % len(trainloader) == len(trainloader)-1:\n",
+        "            print(f'[{epoch + 1}, {i + 1:5d}] loss: {running_loss / len(trainloader):.3f}')\n",
         "            running_loss = 0.0\n",
         "\n",
         "print('Finished Training')"
@@ -736,47 +736,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bScYW8G5Pbj7",
-        "outputId": "546a3577-76ce-4d29-8aa0-e2dff11e3ea8"
+        "outputId": "3e412db9-3c9d-4ba8-8a28-bfa36977ac8a"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1,    50] loss: 0.067\n",
-            "[1,   100] loss: 0.058\n",
-            "[1,   150] loss: 0.058\n",
-            "[2,    50] loss: 0.058\n",
-            "[2,   100] loss: 0.052\n",
-            "[2,   150] loss: 0.047\n",
-            "[3,    50] loss: 0.050\n",
-            "[3,   100] loss: 0.050\n",
-            "[3,   150] loss: 0.043\n",
-            "[4,    50] loss: 0.039\n",
-            "[4,   100] loss: 0.039\n",
-            "[4,   150] loss: 0.038\n",
-            "[5,    50] loss: 0.036\n",
-            "[5,   100] loss: 0.036\n",
-            "[5,   150] loss: 0.034\n",
-            "[6,    50] loss: 0.034\n",
-            "[6,   100] loss: 0.027\n",
-            "[6,   150] loss: 0.033\n",
-            "[7,    50] loss: 0.030\n",
-            "[7,   100] loss: 0.016\n",
-            "[7,   150] loss: 0.037\n",
-            "[8,    50] loss: 0.025\n",
-            "[8,   100] loss: 0.029\n",
-            "[8,   150] loss: 0.014\n",
-            "[9,    50] loss: 0.018\n",
-            "[9,   100] loss: 0.014\n",
-            "[9,   150] loss: 0.016\n",
-            "[10,    50] loss: 0.022\n",
-            "[10,   100] loss: 0.010\n",
-            "[10,   150] loss: 0.009\n",
+            "[1,   155] loss: 0.596\n",
+            "[2,   155] loss: 0.500\n",
+            "[3,   155] loss: 0.448\n",
+            "[4,   155] loss: 0.357\n",
+            "[5,   155] loss: 0.311\n",
+            "[6,   155] loss: 0.284\n",
+            "[7,   155] loss: 0.254\n",
+            "[8,   155] loss: 0.131\n",
+            "[9,   155] loss: 0.144\n",
+            "[10,   155] loss: 0.112\n",
+            "[11,   155] loss: 0.109\n",
+            "[12,   155] loss: 0.112\n",
+            "[13,   155] loss: 0.035\n",
+            "[14,   155] loss: 0.008\n",
+            "[15,   155] loss: 0.207\n",
+            "[16,   155] loss: 0.078\n",
+            "[17,   155] loss: 0.038\n",
+            "[18,   155] loss: 0.013\n",
+            "[19,   155] loss: 0.016\n",
+            "[20,   155] loss: 0.048\n",
             "Finished Training\n",
-            "CPU times: user 35.6 s, sys: 3.09 s, total: 38.7 s\n",
-            "Wall time: 1min 39s\n"
+            "CPU times: user 1min 14s, sys: 6.88 s, total: 1min 21s\n",
+            "Wall time: 3min\n"
           ]
         }
       ]
