comments and corrections

--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMs90RYx0wPkb+Mw/yKEknb",
+      "authorship_tag": "ABX9TyMWi7uIQVbn6J2MKK7e8SMh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,12 +75,16 @@
     {
       "cell_type": "code",
       "source": [
+        "# PyTorch model and training necessities\n",
         "import torch\n",
-        "import torchvision\n",
-        "import torchvision.transforms as transforms\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
         "\n",
+        "# image datasets and image manipulation\n",
+        "import torchvision\n",
+        "import torchvision.transforms as transforms\n",
+        "\n",
+        "# image display\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
@@ -184,8 +188,10 @@
         "\n",
         "batch_size = 4\n",
         "\n",
+        "# pull the data from the drive\n",
         "trainset = torchvision.datasets.ImageFolder('/content/drive/MyDrive/colab/corrosion_dataset/train', transform=transform)\n",
         "\n",
+        "# pull instances of the data\n",
         "trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
         "\n",
         "testset = torchvision.datasets.ImageFolder('/content/drive/MyDrive/colab/corrosion_dataset/valid', transform=transform)\n",
@@ -216,7 +222,7 @@
         "\n",
         "plt.rcParams[\"figure.figsize\"] = (15, 50)\n",
         "\n",
-        "# functions to show an image\n",
+        "# function for inline image display\n",
         "def imshow(img):\n",
         "    img = img / 2 + 0.5     # unnormalize\n",
         "    npimg = img.numpy()\n",
@@ -232,7 +238,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# get some random training images\n",
+        "# extract a batch of 4 images\n",
         "dataiter = iter(trainloader)\n",
         "images, labels = dataiter.next()"
       ],
@@ -245,8 +251,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# show images and print labels\n",
+        "# show images\n",
         "imshow(torchvision.utils.make_grid(images))\n",
+        "# print labels\n",
         "print('\\n'.join(f'{classes[labels[j]]:10s}' for j in range(batch_size)))"
       ],
       "metadata": {
@@ -459,6 +466,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**The purpose of the bottleneck layer is to capture patterns along the depth dimension, as it can not capture spatial patterns due to 1x1 kernel, and cut the computational cost by reducing the number of parameters or features maps.**"
+      ],
+      "metadata": {
+        "id": "C33_K83Tpw9s"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class Net(nn.Module):\n",
@@ -534,6 +550,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "QOn738Hdx3Ys"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%%time\n",
@@ -562,13 +587,13 @@
         "\n",
         "        # print statistics\n",
         "        running_loss += loss.item()\n",
-        "\n",
-        "        if running_loss == 0.000:\n",
-        "            break\n",
         "        \n",
         "        if i % len(trainloader) == len(trainloader)-1:\n",
         "            print(f'[epoch: {epoch + 1}, batches: {i + 1:5d}] => loss: {running_loss / len(trainloader):.3f}')\n",
-        "            running_loss = 0.0\n",
+        "\n",
+        "            if running_loss == 0.000:\n",
+        "                break\n",
+        "\n",
         "\n",
         "print('Finished Training')"
       ],
@@ -635,7 +660,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Saving and loading the weights"
+        "# Save and load the weights"
       ],
       "metadata": {
         "id": "QW2_gtv5ulTf"
