--- a/Deep_CNN_Image_Classifier.ipynb
+++ b/Deep_CNN_Image_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "Deep-CNN-Image-Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMWi7uIQVbn6J2MKK7e8SMh",
+      "authorship_tag": "ABX9TyMXmMjXUahONezSCTNgrQ5D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -552,7 +552,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "For each epoch, the for loop on each pass does the following:\n",
+        "\n",
+        "- Gets a batch of training data from the DataLoader\n",
+        "\n",
+        "- Zeros the optimizer’s gradients\n",
+        "\n",
+        "- Performs an inference - that is, gets predictions from the model for an input batch\n",
+        "\n",
+        "- Calculates the loss for that set of predictions vs. the labels on the dataset\n",
+        "\n",
+        "- Calculates the backward gradients over the learning weights\n",
+        "\n",
+        "- Tells the optimizer to perform one learning step - that is, adjust the model’s learning weights based on the observed gradients for this batch, according to the optimization algorithm we chose\n",
+        "\n",
+        "- It reports on the loss for every epoch"
       ],
       "metadata": {
         "id": "QOn738Hdx3Ys"
