--- a/YOLOv5_Custom_Training.ipynb
+++ b/YOLOv5_Custom_Training.ipynb
@@ -62,7 +62,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
       "metadata": {
         "id": "TFKe9YodvuPV"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -358,7 +358,7 @@
       "metadata": {
         "id": "veoiQ0GtghEU"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "id": "c7YHNyH80hH-",
         "outputId": "6db50b34-bc04-4c9c-8b75-72f3d33dc2aa"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -606,7 +606,7 @@
       "metadata": {
         "id": "0urHQ7iHyZTC"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -623,7 +623,7 @@
         "id": "5fNC54u6y60B",
         "outputId": "3d8f4357-5e98-4df7-ed9e-1aef82aac105"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -851,7 +851,7 @@
       "metadata": {
         "id": "aC4qUvqkbDJV"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -868,7 +868,7 @@
         "id": "Frxg0UD8eE_U",
         "outputId": "592fb516-7af6-4dc8-cc10-dda715824056"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1086,7 +1086,7 @@
       "metadata": {
         "id": "1TBjZz8GgqVA"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1103,7 +1103,7 @@
         "id": "ZZ5QUF3lg4jv",
         "outputId": "aa8e5748-6857-45ab-a79c-0e8fe9af7ecf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1282,7 +1282,7 @@
         "id": "jtmS7_TXFsT3"
       },
       "source": [
-        "#Run Inference  With Trained Weights\n",
+        "# Step 4: Run Inference With Trained Weights\n",
         "Run inference with a pretrained checkpoint on contents of `test/images` folder downloaded from Roboflow."
       ]
     },
@@ -1321,7 +1321,7 @@
         "for image in image_path:\n",
         "    display(Image(filename=image_path[image], width=400))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1403,17 +1403,6 @@
       "metadata": {
         "id": "3-v36dtQz9yN"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "j1tXp42Xs3XF"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
