--- a/YOLOv5_Hyperparameter_Evolution.ipynb
+++ b/YOLOv5_Hyperparameter_Evolution.ipynb
@@ -6,7 +6,7 @@
       "name": "YOLOv5-Hyperparameter-Evolution.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/Fge2i2Ha9SGGFPBvjIKf",
+      "authorship_tag": "ABX9TyOXdzVXdTuEnNzlJVeawa2R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XzxQASmvBMcF",
-        "outputId": "29ff2d60-5a89-4fa3-c2eb-a0bea3f9e524"
+        "outputId": "288259b2-e9bb-4856-fc21-018838338286"
       },
       "outputs": [
         {
@@ -84,7 +84,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jDTqd5ntBzrx",
-        "outputId": "bb312da5-b6b4-48a7-9c33-bf99657b4968"
+        "outputId": "c61e79df-59df-4773-f771-e47aef75a503"
       },
       "execution_count": 2,
       "outputs": [
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0JpWuu2CNsx",
-        "outputId": "424b9622-67ab-4ac7-e606-1d2480ef01c3"
+        "outputId": "6cb990dc-c5e8-408f-a7a1-23f7fd4f6f39"
       },
       "execution_count": 3,
       "outputs": [
@@ -134,17 +134,84 @@
           "name": "stdout",
           "text": [
             "/content/drive/MyDrive/colab/yolov5\n",
-            "\u001b[K     |████████████████████████████████| 1.6 MB 4.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 145 kB 5.2 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 178 kB 50.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.1 MB 50.2 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 67 kB 5.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 54 kB 2.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 138 kB 43.2 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 62 kB 1.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.6 MB 5.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 145 kB 4.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 178 kB 48.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.1 MB 52.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 67 kB 5.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 54 kB 2.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 138 kB 57.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 62 kB 1.4 MB/s \n",
             "\u001b[?25h  Building wheel for roboflow (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for wget (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Setup complete. Using torch 1.12.1+cu113 (CPU)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Get a Dataset"
+      ],
+      "metadata": {
+        "id": "I3CZOgf0vMHh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir ../datasets"
+      ],
+      "metadata": {
+        "id": "74vyWN2ow3J2"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# set up environment\n",
+        "os.environ[\"DATASET_DIRECTORY\"] = \"/content/drive/MyDrive/colab/datasets\""
+      ],
+      "metadata": {
+        "id": "j7DdSEfdwi6t"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from roboflow import Roboflow\n",
+        "rf = Roboflow(api_key=\"hqecDDiHcpNES0AxG9i3\")\n",
+        "project = rf.workspace(\"caitlin-hall\").project(\"shipclassification\")\n",
+        "dataset = project.version(3).download(\"yolov5\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zgivqUXHwLTT",
+        "outputId": "f6e2808c-9b5c-420b-ab45-91930e102671"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "loading Roboflow workspace...\n",
+            "loading Roboflow project...\n",
+            "Downloading Dataset Version Zip in /content/drive/MyDrive/colab/datasets/ShipClassification-3 to yolov5pytorch: 100% [32666871 / 32666871] bytes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Extracting Dataset Version Zip to /content/drive/MyDrive/colab/datasets/ShipClassification-3 in yolov5pytorch:: 100%|██████████| 2714/2714 [00:20<00:00, 134.22it/s]\n"
           ]
         }
       ]
